# the-desktop-trojan

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
src/: CMakeLists.txt  animation.cpp  animation.h  events.cpp  events.h  framerate.cpp  framerate.h  infoprovider.cpp  infoprovider.h  main.cpp  res.rc  resources.cpp  resources.h  sdlwrapper.cpp  sdlwrapper.h  stringutils.cpp  stringutils.h
submodules/: CMakeLists.txt
